# gcmake-simple-project

./: CMakeLists.txt  cmake_data.json  main.cpp
include/: Printer.hpp
src/: Printer.cpp
